[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/3d-models/buildings/Warsaw/Warsaw Turret/Warsaw Turret Base.obj" type="ArrayMesh" id=1]
[ext_resource path="res://assets/3d-models/buildings/Warsaw/Warsaw Turret/Warsaw Turret Gun.obj" type="ArrayMesh" id=2]
[ext_resource path="res://assets/scripts/buildings/type-specific/Turret.gd" type="Script" id=3]
[ext_resource path="res://assets/data/building-data/WarsawPact/WarsawTurret.tres" type="Resource" id=4]
[ext_resource path="res://assets/prefabs/projectiles/WarsawBullet.tscn" type="PackedScene" id=5]

[sub_resource type="SphereShape" id=2]
radius = 30.0

[sub_resource type="ConcavePolygonShape" id=1]
data = PoolVector3Array( 0.169, 1, 0.4161, 0.3982, 0, 0.65, -0.169, 1, 0.4161, -0.169, 1, 0.4161, 0.3982, 0, 0.65, -0.3982, 0, 0.65, 0.4161, 1, -0.169, 0.65, 0, -0.3982, 0.4161, 1, 0.169, 0.4161, 1, 0.169, 0.65, 0, -0.3982, 0.65, 0, 0.3982, 0.106, 1.0884, -0.2637, 0.2637, 1.0884, -0.106, 0.106, 1.0884, 0.2637, 0.106, 1.0884, 0.2637, 0.2637, 1.0884, -0.106, 0.2637, 1.0884, 0.106, -0.4161, 1, 0.169, -0.65, 0, 0.3982, -0.4161, 1, -0.169, -0.4161, 1, -0.169, -0.65, 0, 0.3982, -0.65, 0, -0.3982, -0.169, 1, -0.4161, -0.3982, 0, -0.65, 0.169, 1, -0.4161, 0.169, 1, -0.4161, -0.3982, 0, -0.65, 0.3982, 0, -0.65, -0.4489, 0.0644, 0.6174, -0.5143, 0.0644, 0.5999, -0.4333, 0.0472, 0.5591, -0.4333, 0.0472, 0.5591, -0.5143, 0.0644, 0.5999, -0.4837, 0.0452, 0.5486, -0.3994, 0.9356, -0.3024, -0.4136, 0.9356, -0.2492, -0.3471, 0.9165, -0.2733, -0.3471, 0.9165, -0.2733, -0.4136, 0.9356, -0.2492, -0.3553, 0.9183, -0.2336, 0.5143, 0.0644, 0.5999, 0.4489, 0.0644, 0.6174, 0.4837, 0.0452, 0.5486, 0.4837, 0.0452, 0.5486, 0.4489, 0.0644, 0.6174, 0.4333, 0.0472, 0.5591, -0.5999, 0.0644, -0.5143, -0.5143, 0.0644, -0.5999, -0.5486, 0.0452, -0.4837, -0.5486, 0.0452, -0.4837, -0.5143, 0.0644, -0.5999, -0.4837, 0.0452, -0.5486, 0.4489, 0.0644, 0.6174, 0.2492, 0.9356, 0.4136, 0.4333, 0.0472, 0.5591, 0.4333, 0.0472, 0.5591, 0.2492, 0.9356, 0.4136, 0.2336, 0.9183, 0.3553, -0.3024, 0.9356, -0.3994, -0.3994, 0.9356, -0.3024, -0.2733, 0.9165, -0.3471, -0.2733, 0.9165, -0.3471, -0.3994, 0.9356, -0.3024, -0.3471, 0.9165, -0.2733, 0.2492, 0.9356, 0.4136, 0.3024, 0.9356, 0.3994, 0.2336, 0.9183, 0.3553, 0.2336, 0.9183, 0.3553, 0.3024, 0.9356, 0.3994, 0.2733, 0.9165, 0.3471, -0.5143, 0.0644, -0.5999, -0.4489, 0.0644, -0.6174, -0.4837, 0.0452, -0.5486, -0.4837, 0.0452, -0.5486, -0.4489, 0.0644, -0.6174, -0.4333, 0.0472, -0.5591, 0.2492, 0.9356, -0.4136, 0.4489, 0.0644, -0.6174, 0.2336, 0.9183, -0.3553, 0.2336, 0.9183, -0.3553, 0.4489, 0.0644, -0.6174, 0.4333, 0.0472, -0.5591, -0.4489, 0.0644, -0.6174, -0.2492, 0.9356, -0.4136, -0.4333, 0.0472, -0.5591, -0.4333, 0.0472, -0.5591, -0.2492, 0.9356, -0.4136, -0.2336, 0.9183, -0.3553, 0.4489, 0.0644, -0.6174, 0.5143, 0.0644, -0.5999, 0.4333, 0.0472, -0.5591, 0.4333, 0.0472, -0.5591, 0.5143, 0.0644, -0.5999, 0.4837, 0.0452, -0.5486, -0.2492, 0.9356, -0.4136, -0.3024, 0.9356, -0.3994, -0.2336, 0.9183, -0.3553, -0.2336, 0.9183, -0.3553, -0.3024, 0.9356, -0.3994, -0.2733, 0.9165, -0.3471, 0.106, 1.0884, -0.2637, 0.106, 1.0884, 0.2637, -0.106, 1.0884, -0.2637, -0.106, 1.0884, -0.2637, 0.106, 1.0884, 0.2637, -0.106, 1.0884, 0.2637, -0.106, 1.0884, -0.2637, -0.106, 1.0884, 0.2637, -0.2637, 1.0884, -0.106, -0.2637, 1.0884, -0.106, -0.106, 1.0884, 0.2637, -0.2637, 1.0884, 0.106, 0.169, 1, 0.4161, 0.4161, 1, 0.169, 0.2925, 1, 0.383, 0.2925, 1, 0.383, 0.4161, 1, 0.169, 0.383, 1, 0.2925, 0.4161, 1, -0.169, 0.169, 1, -0.4161, 0.383, 1, -0.2925, 0.383, 1, -0.2925, 0.169, 1, -0.4161, 0.2925, 1, -0.383, -0.169, 1, -0.4161, -0.4161, 1, -0.169, -0.2925, 1, -0.383, -0.2925, 1, -0.383, -0.4161, 1, -0.169, -0.383, 1, -0.2925, -0.383, 1, 0.2925, -0.4161, 1, 0.169, -0.2925, 1, 0.383, -0.2925, 1, 0.383, -0.4161, 1, 0.169, -0.169, 1, 0.4161, -0.2637, 1.0884, -0.106, -0.2637, 1.0884, 0.106, -0.4161, 1, -0.169, -0.4161, 1, -0.169, -0.2637, 1.0884, 0.106, -0.4161, 1, 0.169, -0.106, 1.0884, 0.2637, 0.106, 1.0884, 0.2637, -0.169, 1, 0.4161, -0.169, 1, 0.4161, 0.106, 1.0884, 0.2637, 0.169, 1, 0.4161, 0.2637, 1.0884, 0.106, 0.2637, 1.0884, -0.106, 0.4161, 1, 0.169, 0.4161, 1, 0.169, 0.2637, 1.0884, -0.106, 0.4161, 1, -0.169, 0.106, 1.0884, -0.2637, -0.106, 1.0884, -0.2637, 0.169, 1, -0.4161, 0.169, 1, -0.4161, -0.106, 1.0884, -0.2637, -0.169, 1, -0.4161, 0.106, 1.0884, 0.2637, 0.2637, 1.0884, 0.106, 0.169, 1, 0.4161, 0.169, 1, 0.4161, 0.2637, 1.0884, 0.106, 0.4161, 1, 0.169, 0.2637, 1.0884, -0.106, 0.106, 1.0884, -0.2637, 0.4161, 1, -0.169, 0.4161, 1, -0.169, 0.106, 1.0884, -0.2637, 0.169, 1, -0.4161, -0.106, 1.0884, -0.2637, -0.2637, 1.0884, -0.106, -0.169, 1, -0.4161, -0.169, 1, -0.4161, -0.2637, 1.0884, -0.106, -0.4161, 1, -0.169, -0.2637, 1.0884, 0.106, -0.106, 1.0884, 0.2637, -0.4161, 1, 0.169, -0.4161, 1, 0.169, -0.106, 1.0884, 0.2637, -0.169, 1, 0.4161, -0.5143, 0.0644, 0.5999, -0.4489, 0.0644, 0.6174, -0.5241, 0, 0.6163, -0.5241, 0, 0.6163, -0.4489, 0.0644, 0.6174, -0.3982, 0, 0.65, -0.4489, 0.0644, 0.6174, -0.2492, 0.9356, 0.4136, -0.3982, 0, 0.65, -0.3982, 0, 0.65, -0.2492, 0.9356, 0.4136, -0.169, 1, 0.4161, -0.2492, 0.9356, 0.4136, -0.3024, 0.9356, 0.3994, -0.169, 1, 0.4161, -0.169, 1, 0.4161, -0.3024, 0.9356, 0.3994, -0.2925, 1, 0.383, -0.5999, 0.0644, 0.5143, -0.5143, 0.0644, 0.5999, -0.6163, 0, 0.5241, -0.6163, 0, 0.5241, -0.5143, 0.0644, 0.5999, -0.5241, 0, 0.6163, -0.3024, 0.9356, 0.3994, -0.3994, 0.9356, 0.3024, -0.2925, 1, 0.383, -0.2925, 1, 0.383, -0.3994, 0.9356, 0.3024, -0.383, 1, 0.2925, -0.6174, 0.0644, 0.4489, -0.5999, 0.0644, 0.5143, -0.65, 0, 0.3982, -0.65, 0, 0.3982, -0.5999, 0.0644, 0.5143, -0.6163, 0, 0.5241, -0.3994, 0.9356, 0.3024, -0.4136, 0.9356, 0.2492, -0.383, 1, 0.2925, -0.383, 1, 0.2925, -0.4136, 0.9356, 0.2492, -0.4161, 1, 0.169, -0.4136, 0.9356, 0.2492, -0.6174, 0.0644, 0.4489, -0.4161, 1, 0.169, -0.4161, 1, 0.169, -0.6174, 0.0644, 0.4489, -0.65, 0, 0.3982, -0.3024, 0.9356, -0.3994, -0.2492, 0.9356, -0.4136, -0.2925, 1, -0.383, -0.2925, 1, -0.383, -0.2492, 0.9356, -0.4136, -0.169, 1, -0.4161, -0.2492, 0.9356, -0.4136, -0.4489, 0.0644, -0.6174, -0.169, 1, -0.4161, -0.169, 1, -0.4161, -0.4489, 0.0644, -0.6174, -0.3982, 0, -0.65, -0.4489, 0.0644, -0.6174, -0.5143, 0.0644, -0.5999, -0.3982, 0, -0.65, -0.3982, 0, -0.65, -0.5143, 0.0644, -0.5999, -0.5241, 0, -0.6163, -0.3994, 0.9356, -0.3024, -0.3024, 0.9356, -0.3994, -0.383, 1, -0.2925, -0.383, 1, -0.2925, -0.3024, 0.9356, -0.3994, -0.2925, 1, -0.383, -0.5143, 0.0644, -0.5999, -0.5999, 0.0644, -0.5143, -0.5241, 0, -0.6163, -0.5241, 0, -0.6163, -0.5999, 0.0644, -0.5143, -0.6163, 0, -0.5241, -0.4136, 0.9356, -0.2492, -0.3994, 0.9356, -0.3024, -0.4161, 1, -0.169, -0.4161, 1, -0.169, -0.3994, 0.9356, -0.3024, -0.383, 1, -0.2925, -0.5999, 0.0644, -0.5143, -0.6174, 0.0644, -0.4489, -0.6163, 0, -0.5241, -0.6163, 0, -0.5241, -0.6174, 0.0644, -0.4489, -0.65, 0, -0.3982, -0.6174, 0.0644, -0.4489, -0.4136, 0.9356, -0.2492, -0.65, 0, -0.3982, -0.65, 0, -0.3982, -0.4136, 0.9356, -0.2492, -0.4161, 1, -0.169, 0.3994, 0.9356, -0.3024, 0.4136, 0.9356, -0.2492, 0.383, 1, -0.2925, 0.383, 1, -0.2925, 0.4136, 0.9356, -0.2492, 0.4161, 1, -0.169, 0.4136, 0.9356, -0.2492, 0.6174, 0.0644, -0.4489, 0.4161, 1, -0.169, 0.4161, 1, -0.169, 0.6174, 0.0644, -0.4489, 0.65, 0, -0.3982, 0.6174, 0.0644, -0.4489, 0.5999, 0.0644, -0.5143, 0.65, 0, -0.3982, 0.65, 0, -0.3982, 0.5999, 0.0644, -0.5143, 0.6163, 0, -0.5241, 0.3024, 0.9356, -0.3994, 0.3994, 0.9356, -0.3024, 0.2925, 1, -0.383, 0.2925, 1, -0.383, 0.3994, 0.9356, -0.3024, 0.383, 1, -0.2925, 0.5999, 0.0644, -0.5143, 0.5143, 0.0644, -0.5999, 0.6163, 0, -0.5241, 0.6163, 0, -0.5241, 0.5143, 0.0644, -0.5999, 0.5241, 0, -0.6163, 0.2492, 0.9356, -0.4136, 0.3024, 0.9356, -0.3994, 0.169, 1, -0.4161, 0.169, 1, -0.4161, 0.3024, 0.9356, -0.3994, 0.2925, 1, -0.383, 0.5143, 0.0644, -0.5999, 0.4489, 0.0644, -0.6174, 0.5241, 0, -0.6163, 0.5241, 0, -0.6163, 0.4489, 0.0644, -0.6174, 0.3982, 0, -0.65, 0.4489, 0.0644, -0.6174, 0.2492, 0.9356, -0.4136, 0.3982, 0, -0.65, 0.3982, 0, -0.65, 0.2492, 0.9356, -0.4136, 0.169, 1, -0.4161, 0.3024, 0.9356, 0.3994, 0.2492, 0.9356, 0.4136, 0.2925, 1, 0.383, 0.2925, 1, 0.383, 0.2492, 0.9356, 0.4136, 0.169, 1, 0.4161, 0.2492, 0.9356, 0.4136, 0.4489, 0.0644, 0.6174, 0.169, 1, 0.4161, 0.169, 1, 0.4161, 0.4489, 0.0644, 0.6174, 0.3982, 0, 0.65, 0.4489, 0.0644, 0.6174, 0.5143, 0.0644, 0.5999, 0.3982, 0, 0.65, 0.3982, 0, 0.65, 0.5143, 0.0644, 0.5999, 0.5241, 0, 0.6163, 0.3994, 0.9356, 0.3024, 0.3024, 0.9356, 0.3994, 0.383, 1, 0.2925, 0.383, 1, 0.2925, 0.3024, 0.9356, 0.3994, 0.2925, 1, 0.383, 0.5143, 0.0644, 0.5999, 0.5999, 0.0644, 0.5143, 0.5241, 0, 0.6163, 0.5241, 0, 0.6163, 0.5999, 0.0644, 0.5143, 0.6163, 0, 0.5241, 0.4136, 0.9356, 0.2492, 0.3994, 0.9356, 0.3024, 0.4161, 1, 0.169, 0.4161, 1, 0.169, 0.3994, 0.9356, 0.3024, 0.383, 1, 0.2925, 0.5999, 0.0644, 0.5143, 0.6174, 0.0644, 0.4489, 0.6163, 0, 0.5241, 0.6163, 0, 0.5241, 0.6174, 0.0644, 0.4489, 0.65, 0, 0.3982, 0.6174, 0.0644, 0.4489, 0.4136, 0.9356, 0.2492, 0.65, 0, 0.3982, 0.65, 0, 0.3982, 0.4136, 0.9356, 0.2492, 0.4161, 1, 0.169, -0.2336, 0.9183, 0.3553, -0.4333, 0.0472, 0.5591, -0.2733, 0.9165, 0.3471, -0.2733, 0.9165, 0.3471, -0.4333, 0.0472, 0.5591, -0.4837, 0.0452, 0.5486, -0.2733, 0.9165, 0.3471, -0.4837, 0.0452, 0.5486, -0.3471, 0.9165, 0.2733, -0.3471, 0.9165, 0.2733, -0.4837, 0.0452, 0.5486, -0.5486, 0.0452, 0.4837, -0.3471, 0.9165, 0.2733, -0.5486, 0.0452, 0.4837, -0.3553, 0.9183, 0.2336, -0.3553, 0.9183, 0.2336, -0.5486, 0.0452, 0.4837, -0.5591, 0.0472, 0.4333, -0.4333, 0.0472, -0.5591, -0.2336, 0.9183, -0.3553, -0.4837, 0.0452, -0.5486, -0.4837, 0.0452, -0.5486, -0.2336, 0.9183, -0.3553, -0.2733, 0.9165, -0.3471, -0.4837, 0.0452, -0.5486, -0.2733, 0.9165, -0.3471, -0.5486, 0.0452, -0.4837, -0.5486, 0.0452, -0.4837, -0.2733, 0.9165, -0.3471, -0.3471, 0.9165, -0.2733, -0.5486, 0.0452, -0.4837, -0.3471, 0.9165, -0.2733, -0.5591, 0.0472, -0.4333, -0.5591, 0.0472, -0.4333, -0.3471, 0.9165, -0.2733, -0.3553, 0.9183, -0.2336, 0.5591, 0.0472, -0.4333, 0.3553, 0.9183, -0.2336, 0.5486, 0.0452, -0.4837, 0.5486, 0.0452, -0.4837, 0.3553, 0.9183, -0.2336, 0.3471, 0.9165, -0.2733, 0.5486, 0.0452, -0.4837, 0.3471, 0.9165, -0.2733, 0.4837, 0.0452, -0.5486, 0.4837, 0.0452, -0.5486, 0.3471, 0.9165, -0.2733, 0.2733, 0.9165, -0.3471, 0.4837, 0.0452, -0.5486, 0.2733, 0.9165, -0.3471, 0.4333, 0.0472, -0.5591, 0.4333, 0.0472, -0.5591, 0.2733, 0.9165, -0.3471, 0.2336, 0.9183, -0.3553, 0.4333, 0.0472, 0.5591, 0.2336, 0.9183, 0.3553, 0.4837, 0.0452, 0.5486, 0.4837, 0.0452, 0.5486, 0.2336, 0.9183, 0.3553, 0.2733, 0.9165, 0.3471, 0.4837, 0.0452, 0.5486, 0.2733, 0.9165, 0.3471, 0.5486, 0.0452, 0.4837, 0.5486, 0.0452, 0.4837, 0.2733, 0.9165, 0.3471, 0.3471, 0.9165, 0.2733, 0.5486, 0.0452, 0.4837, 0.3471, 0.9165, 0.2733, 0.5591, 0.0472, 0.4333, 0.5591, 0.0472, 0.4333, 0.3471, 0.9165, 0.2733, 0.3553, 0.9183, 0.2336, 0.3024, 0.9356, 0.3994, 0.3994, 0.9356, 0.3024, 0.2733, 0.9165, 0.3471, 0.2733, 0.9165, 0.3471, 0.3994, 0.9356, 0.3024, 0.3471, 0.9165, 0.2733, -0.6174, 0.0644, -0.4489, -0.5999, 0.0644, -0.5143, -0.5591, 0.0472, -0.4333, -0.5591, 0.0472, -0.4333, -0.5999, 0.0644, -0.5143, -0.5486, 0.0452, -0.4837, -0.2492, 0.9356, 0.4136, -0.4489, 0.0644, 0.6174, -0.2336, 0.9183, 0.3553, -0.2336, 0.9183, 0.3553, -0.4489, 0.0644, 0.6174, -0.4333, 0.0472, 0.5591, 0.5999, 0.0644, 0.5143, 0.5143, 0.0644, 0.5999, 0.5486, 0.0452, 0.4837, 0.5486, 0.0452, 0.4837, 0.5143, 0.0644, 0.5999, 0.4837, 0.0452, 0.5486, -0.4136, 0.9356, -0.2492, -0.6174, 0.0644, -0.4489, -0.3553, 0.9183, -0.2336, -0.3553, 0.9183, -0.2336, -0.6174, 0.0644, -0.4489, -0.5591, 0.0472, -0.4333, -0.3024, 0.9356, 0.3994, -0.2492, 0.9356, 0.4136, -0.2733, 0.9165, 0.3471, -0.2733, 0.9165, 0.3471, -0.2492, 0.9356, 0.4136, -0.2336, 0.9183, 0.3553, 0.3994, 0.9356, 0.3024, 0.4136, 0.9356, 0.2492, 0.3471, 0.9165, 0.2733, 0.3471, 0.9165, 0.2733, 0.4136, 0.9356, 0.2492, 0.3553, 0.9183, 0.2336, 0.4136, 0.9356, -0.2492, 0.3994, 0.9356, -0.3024, 0.3553, 0.9183, -0.2336, 0.3553, 0.9183, -0.2336, 0.3994, 0.9356, -0.3024, 0.3471, 0.9165, -0.2733, -0.5143, 0.0644, 0.5999, -0.5999, 0.0644, 0.5143, -0.4837, 0.0452, 0.5486, -0.4837, 0.0452, 0.5486, -0.5999, 0.0644, 0.5143, -0.5486, 0.0452, 0.4837, 0.6174, 0.0644, 0.4489, 0.5999, 0.0644, 0.5143, 0.5591, 0.0472, 0.4333, 0.5591, 0.0472, 0.4333, 0.5999, 0.0644, 0.5143, 0.5486, 0.0452, 0.4837, 0.6174, 0.0644, -0.4489, 0.4136, 0.9356, -0.2492, 0.5591, 0.0472, -0.4333, 0.5591, 0.0472, -0.4333, 0.4136, 0.9356, -0.2492, 0.3553, 0.9183, -0.2336, -0.3994, 0.9356, 0.3024, -0.3024, 0.9356, 0.3994, -0.3471, 0.9165, 0.2733, -0.3471, 0.9165, 0.2733, -0.3024, 0.9356, 0.3994, -0.2733, 0.9165, 0.3471, 0.4136, 0.9356, 0.2492, 0.6174, 0.0644, 0.4489, 0.3553, 0.9183, 0.2336, 0.3553, 0.9183, 0.2336, 0.6174, 0.0644, 0.4489, 0.5591, 0.0472, 0.4333, 0.5999, 0.0644, -0.5143, 0.6174, 0.0644, -0.4489, 0.5486, 0.0452, -0.4837, 0.5486, 0.0452, -0.4837, 0.6174, 0.0644, -0.4489, 0.5591, 0.0472, -0.4333, -0.5999, 0.0644, 0.5143, -0.6174, 0.0644, 0.4489, -0.5486, 0.0452, 0.4837, -0.5486, 0.0452, 0.4837, -0.6174, 0.0644, 0.4489, -0.5591, 0.0472, 0.4333, 0.3994, 0.9356, -0.3024, 0.3024, 0.9356, -0.3994, 0.3471, 0.9165, -0.2733, 0.3471, 0.9165, -0.2733, 0.3024, 0.9356, -0.3994, 0.2733, 0.9165, -0.3471, -0.4136, 0.9356, 0.2492, -0.3994, 0.9356, 0.3024, -0.3553, 0.9183, 0.2336, -0.3553, 0.9183, 0.2336, -0.3994, 0.9356, 0.3024, -0.3471, 0.9165, 0.2733, 0.5143, 0.0644, -0.5999, 0.5999, 0.0644, -0.5143, 0.4837, 0.0452, -0.5486, 0.4837, 0.0452, -0.5486, 0.5999, 0.0644, -0.5143, 0.5486, 0.0452, -0.4837, -0.6174, 0.0644, 0.4489, -0.4136, 0.9356, 0.2492, -0.5591, 0.0472, 0.4333, -0.5591, 0.0472, 0.4333, -0.4136, 0.9356, 0.2492, -0.3553, 0.9183, 0.2336, 0.3024, 0.9356, -0.3994, 0.2492, 0.9356, -0.4136, 0.2733, 0.9165, -0.3471, 0.2733, 0.9165, -0.3471, 0.2492, 0.9356, -0.4136, 0.2336, 0.9183, -0.3553 )

[node name="Warsaw Turret" type="Spatial"]
script = ExtResource( 3 )
data = ExtResource( 4 )
enemy_pos_flat = NodePath("EnemyPositionFlat")
enemy_position_3d = NodePath("EnemyPosition3D")
turret_gun = NodePath("Warsaw Turret Gun")
muzzle = NodePath("Warsaw Turret Gun/Muzzle")
projectile = ExtResource( 5 )

[node name="Vision" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Vision"]
shape = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="." groups=["buildings"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 1 )

[node name="Warsaw Turret Base" type="MeshInstance" parent="."]
mesh = ExtResource( 1 )
material/0 = null

[node name="Warsaw Turret Gun" type="MeshInstance" parent="."]
mesh = ExtResource( 2 )
material/0 = null

[node name="Muzzle" type="Position3D" parent="Warsaw Turret Gun"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.16022, 1.80356, 0 )

[node name="EnemyPositionFlat" type="Position3D" parent="."]

[node name="EnemyPosition3D" type="Position3D" parent="."]

[node name="ShootDelay" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="Vision" to="." method="_on_Vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_Vision_body_exited"]
[connection signal="timeout" from="ShootDelay" to="." method="_on_ShootDelay_timeout"]
